[package]
name = "AdventOfCode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.20"
html2md = "0.2.13"
rayon = "1.0"
glium = "0.32.1"

[toolchain]
channel = "nightly"

[profile.release]
